bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:3: error: ';' expected but '(' found.
                          else {return} (21-n)
                                        ^